sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:8: error: type mismatch;
 found   : Unit
 required: Boolean
      if (i=0) {i+=1}
           ^AlgGnomeSort:12: error: type mismatch;
 found   : Unit
 required: Boolean
      if (i = n-1) {return}
            ^